syntax = "proto3";

package pingpong;

service PingPong {
    rpc PingStream(stream PingRequest) returns (stream PongResponse);
}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}
